Commit 3: Se crea archivo docker compose con bases de datos en docker y se define el properties de cada Microservicio

--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8083
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5431/ms_inventory
+spring.datasource.username=root
+spring.datasource.password=admin
