--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     image: postgres:15.2
     restart: unless-stopped
     environment:
-      POSTGRES_DB: ms_inventory
+      POSTGRES_DB: ms_products
       POSTGRES_USER: root
       POSTGRES_PASSWORD: admin
     ports:
